--- a/NAP_paper.Rmd
+++ b/NAP_paper.Rmd
@@ -1893,7 +1893,8 @@ The success relative to the traditional model fits (discussed in subsection \@re
 (ii) onset rises like /ml/, nasal plateaus (/nm/ and /mn/) and onset falls like /lm/ pattern together as relatively ill-formed in NAP<!-- (third column from left in Figure \@ref(fig:NAPtdFit)) -->, correctly predicting the data, whereby sonorant-initial plateaus and rises do not pattern with (better-formed) obstruent-initial plateaus and rises.
 
 (ref:SonFitAll) Combined sonority models fit (small reduced versions, see detailed versions above). Observed mean log-transformed response times are depicted with red points; distribution of simulated means based on the model are depicted with blue violins. Stimuli ordered from left to right according to their score in the model in ascending well-formedness. 
-```{r SonFitAll,fig.cap = "(ref:SonFitAll)", warning=FALSE, fig.width=c(3.5,3.5,3.5,3.5,3.2,3.2), fig.asp=c(.5,.5,.5,.5,.5,.5), fig.show="hold"}
+#```{r SonFitAll,fig.cap = "(ref:SonFitAll)", warning=FALSE, fig.width=c(3.5,3.5,3.5,3.5,3.2,3.2), fig.asp=c(.5,.5,.5,.5,.5,.5), fig.show="hold"}
+```{r SonFitAll,fig.cap = "(ref:SonFitAll)", warning=FALSE, out.width=c("50%","50%","50%","50%","50%","50%"), fig.width=c(3.5,3.5,3.5,3.5,3.2,3.2), fig.asp=c(.5,.5,.5,.5,.5,.5), fig.show="hold", fig.align = "default"}
 # , fig.align='center', fig.ncol=2
 # ```{r SonFitAll,fig.cap = "(ref:SonFitAll)", warning=FALSE, out.width=c('40%','40%','40%','40%'), out.height=c('70%','70%','70%','70%'), fig.align='center', fig.show="hold"}
 # ```{r SonFitAll,fig.cap = "(ref:SonFitAll)", warning=FALSE, fig.width=c(3,3,3,3), fig.asp=c(.4,.4,.4,.4), fig.show="hold"}
