--- a/bibs/phon_sk.bib
+++ b/bibs/phon_sk.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Aviad Albert at 2019-12-14 20:52:01 +0100 
+%% Created for Aviad Albert at 2020-01-21 11:03:57 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -574,9 +574,9 @@
 	Citation_Identifier = {ItuRBs17704 2015},
 	Collection_Description = {BS Series: Broadcasting service (sound)},
 	Date-Added = {2019-12-12 09:54:29 +0100},
-	Date-Modified = {2019-12-12 09:55:11 +0100},
+	Date-Modified = {2020-01-21 11:03:50 +0100},
 	Description = {Recommendation ITU-R BS.1770-4},
-	Institution = {Radiocommunication Sectour of International Telecommunication Union},
+	Institution = {Radiocommunication Sector of International Telecommunication Union},
 	Keywords = {NAP_paper;Loudness/ Intensity},
 	Notes = {(5(f.n.\#1)) (4) (5) (5) (5) (6) (5) (5) (4) (3b) (9) (3a) (3c) (6) (6) (5) (5)},
 	Publicationstatus = {Published},
