100 ms treshold sentence

--- a/NAP_paper.Rmd
+++ b/NAP_paper.Rmd
@@ -1011,7 +1011,7 @@ We fit a smoothed curve to the periodic energy time series, to eliminate small-s
 
 ###		Perception task {#sec:ptask}
 The experiment was designed as a forced-choice 2-alternative perception task, prompting meta-linguistic syllable count judgements and recording accuracy and response time information. 
-Since all stimuli share the form /CCal/ where the rime *al* is predictable (this becomes clear to participants during the training session), we determined the zero time for valid response times at the the mid point of transition from *C*~2~ to /a/, individually for each one of the 87 stimuli. We used manual segmentation to determine this point for each target. We then excluded response times shorter than 100ms (after the mid point of transition from *C*~2~ to /a/) as too fast to be considered as valid.
+Since all stimuli share the form /CCal/ where the rime *al* is predictable (this becomes clear to participants during the training session), we determined the zero time for valid response times at the the mid point of transition from *C*~2~ to /a/, individually for each one of the 87 stimuli. We used manual segmentation to determine this point for each target. We then excluded response times shorter than 100ms (after the mid point of transition from *C*~2~ to /a/) as too fast to be considered as valid. This led to no exclusions from Experiment 1 and to only one observation being excluded from Experiment 2.
 
 Participants were seated in a quiet room in front of a laptop computer (a MacBook Air 13-inch, Early 2014) running the experiment on OpenSesame 3.1.9 [@mathot2012opensesame], where they listened to the stimuli through a set of closed headphones (Sennhieser HD 201), fed directly from the laptop's internal audio interface. After verifying that participants share a standard understanding of the notion of the syllable with a few German examples of words with one and two syllables, they were instructed to listen to nonce words in an "unknown" foreign language (the use of a speaker with a Hebrew accent in the stimuli that were presented to German listeners was intended to further support a "foreign" type of perception). Participants were instructed to respond quickly and accurately on whether they hear one or two syllables by clicking '1' or '2' on the computer keyboard.[^cf21] 
 A training session of ten trials preceded the experimental trials, allowing the participants to familiarize with the task, and allowing the experimenter to adjust listening volume and monitor potential problems and any misunderstandings regarding the task.
